Flatten ResponseObject (#3252)
* flatten ResponseObject
